# pre-commit-hooks

./: .pre-commit-hooks.yaml  setup.cfg
hooks/: check_comma_in_class_attributes.py
