[metadata]
name = custom_hooks
version = 1.0.0
description = Some custom hooks for pre-commit.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pre-commit/pre-commit-hooks
author = Marcos Martins
author_email = contato@marcosmartins.me
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
python_requires = >=3.7


[options.entry_points]
console_scripts =
    check-comma-in-class-attributes = hooks.check_comma_in_class_attributes:main

[bdist_wheel]
universal = True
